--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
                     <p>logo</p>
                 </div>
                 <div class="center item-nav">
-                    <p>link link link link</p>
+                    <ul>
+                        <li><a href="#">link</a></li>
+                        <li><a href="#">link</a></li>
+                        <li><a href="#">link</a></li>
+                        <li><a href="#">link</a></li>
+                        <li><a href="#">link</a></li>
+                    </ul>
                 </div>
                 <div class="right item-nav">
                     <p>login</p>
